force-app/main/default/objects/Opportunitiescustom__c/Opportunitiescustom__c.object-meta.xml
<CustomObject>
    <label>Opportunitiescustom</label>
    <nameField>
        <displayFormat>O-{000}</displayFormat>
        <label>Opportunity No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunitiescustom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>