force-app/main/default/objects/Opportunitiescustom__c/fields/NameWithDateTime__c.field-meta.xml
<CustomField>
    <fullName>NameWithDateTime__c</fullName>
    <label>NameWithDateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>