force-app/main/default/objects/Opportunitiescustom__c/fields/NameWithTimestamp__c.field-meta.xml
<CustomField>
    <fullName>NameWithTimestamp__c</fullName>
    <label>NameWithTimestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>