force-app/main/default/objects/Opportunitiescustom__c/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <inlineHelpText>Required only when Lead Source is Other</inlineHelpText>
    <label>Other Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>