force-app/main/default/objects/Opportunitiescustom__c/fields/Other_Reason_For_Lost__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_For_Lost__c</fullName>
    <inlineHelpText>Required only when Reason For Lost is Others</inlineHelpText>
    <label>Other Reason For Lost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>