force-app/main/default/objects/Opportunitiescustom__c/fields/Out_Of_State__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Of State</label>
    <type>Checkbox</type>
</CustomField>