force-app/main/default/objects/Opportunitiescustom__c/fields/Reason_For_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Lost__c</fullName>
    <label>Reason For Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already Supplying</fullName>
            </value>
            <value>
                <fullName>No Application</fullName>
            </value>
            <value>
                <fullName>No Product</fullName>
            </value>
            <value>
                <fullName>Not Entertaining The User</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>To Be Discussed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>