force-app/main/default/objects/Opportunitiescustom__c/validationRules/OtherLeadSourceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherLeadSourceValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISPICKVAL( Lead_Source__c , &quot;Other&quot;)),
   NOT(ISBLANK( Other_Lead_Source__c ))
)</errorConditionFormula>
    <errorDisplayField>Other_Lead_Source__c</errorDisplayField>
    <errorMessage>Other Lead Source field can only be edited when Lead Source is &apos;Other&apos;.</errorMessage>
</ValidationRule>