force-app/main/default/objects/Opportunitiescustom__c/validationRules/OtherReasonForLostValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherReasonForLostValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISPICKVAL( Reason_For_Lost__c , &quot;Others&quot;)),
   NOT(ISBLANK( Other_Reason_For_Lost__c ))
)</errorConditionFormula>
    <errorDisplayField>Other_Reason_For_Lost__c</errorDisplayField>
    <errorMessage>Other Reason For Lost field is required only when Reason For Lost is &apos;Others&apos;</errorMessage>
</ValidationRule>